// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`работа MobileClient 1`] = `
<div
  className="MobileClient"
>
  <div
    className="MobileClientFIO"
  >
    Иванов Иван Иванович
  </div>
  <div
    className="MobileClientInfo"
  >
    <div
      className="MobileClientBalance"
    >
      200
    </div>
    <div
      className="MobileClientIsBlockedfalse"
    >
      активен
    </div>
    <input
      onClick={[Function]}
      type="button"
      value="редактировать"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Удалить"
    />
  </div>
</div>
`;

exports[`работа MobileClient 2`] = `
<div
  className="MobileClient"
>
  <div
    className="MobileClientFIO"
  >
    Петров Пётр Петрович
  </div>
  <div
    className="MobileClientInfo"
  >
    <div
      className="MobileClientBalance"
    >
      180
    </div>
    <div
      className="MobileClientIsBlockedfalse"
    >
      активен
    </div>
    <input
      onClick={[Function]}
      type="button"
      value="редактировать"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Удалить"
    />
  </div>
</div>
`;
